# LedgerWare

./: .gitignore  CMakeLists.txt  README.md
include/: Db.hpp  cli.hpp  commands.hpp
migrations/: 001_init.sql
src/: Db.cpp  cli.cpp  commands.cpp  main.cpp
